Fix footer alignment

--- a/Styling/Theme.css
+++ b/Styling/Theme.css
@@ -9,8 +9,11 @@
 body {
     margin: 0; 
     width: 100%; 
-    height: 100%; 
+    /* height: 100%;  */
+    min-height: 100%; 
+    position: relative; 
     background-color: #F6E4AD; 
+    padding-bottom: 150px; 
 }
 
 h2{
@@ -71,10 +74,10 @@ footer{
     /* position: fixed;  */
     position: absolute; /*this added */
     text-align: center; 
-    margin-top: 50px; 
+    margin-top: 50px; /*obsolete by body stuff*/
     background-color: var(--footerColor); 
     /* padding: 1px;  */
-    /* bottom: 0;  */
+    bottom: 0px; 
     /* left: 0;  */
     /* right: 0;  */
     width: 100%;
